animacao de ondas e spawns funcionam como previsto

--- a/ProjetoMini/ProjetoMini/Utility /pt-BR.lproj/Localizable.strings
+++ b/ProjetoMini/ProjetoMini/Utility /pt-BR.lproj/Localizable.strings
@@ -5,4 +5,7 @@
 "Game Over" = "Fim de jogo";
 "Menu" = "Menu";
 "Play again" = "Jogar de novo";
-
+"Settings" = "Ajustes";
+"sound effects" = "efeitos sonoros";
+"music" = "música";
+"return" = "retornar";
